# axonvision_camera_calibration

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Readme.md  camera_streaming.py  extrinsic_calibration.py  extrinsic_calibration_ins.py  ins_reader.py  intrinsic_calibration.py  main_ui.py  pyproject.toml  requirements.txt  test_extrinsics_ins.json
camera_intrinsic/: .gitkeep
config/: __init__.py  config_loader.py  default.yaml  development.yaml  edgesa_config.py  edgesa_settings.yaml  exceptions.py  logging_config.py  production.yaml  settings.yaml
core/: __init__.py  exceptions.py  logging_config.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt  run.sh
services/: __init__.py  camera_mock_sync.py  device_config_service.py
simulation/: __init__.py  device_state.py  mock_device_api.py  mock_discovery.py  mock_sftp.py  server.py
src/axonvision-cli/: Dockerfile
ui/: __init__.py  data_models.py  main_window.py  styles.py
ui/dialogs/: __init__.py  intrinsic_calibration_dialog.py  log_viewer_dialog.py
ui/screens/: __init__.py  calibration_summary_screen.py  camera_preview_screen.py  login_screen.py  platform_config_screen.py  welcome_screen.py
